# VANGUARD-CLEF2026-JOKER

./: .gitignore  LICENSE  README.md  ablation.py  app.js  compare_and_merge.py  config.py  data_processing.py  ensemble_ablation.py  evaluate_plots.py  index.html  path_manager.py  pipeline.py  precompute_embeddings.py  pyproject.toml  rationale_stage12_ablation.py  requirements.txt  run_all.py  run_search.py  step1_old_rationales.py  step1_rationales.py  step2_hard_negatives.py  step2_old_hard_negatives.py  style.css  train_cross_encoder.py  train_judge_gemma4.py  utils.py
.github/workflows/: github-pages.yml
runnable/: ablation.py  compare_and_merge.py  data_processing.py  ensemble_ablation.py  evaluate_plots.py  pipeline.py  precompute_embeddings.py  rationale_stage12_ablation.py  run_all.py  run_search.py  step1_old_rationales.py  step1_rationales.py  step2_hard_negatives.py  step2_old_hard_negatives.py  train_cross_encoder.py  train_judge_gemma4.py
src/iroh/core/: config.py  path_manager.py  pipeline.py  utils.py
src/iroh/data_prep/: compare_and_merge.py  data_processing.py  step1_old_rationales.py  step1_rationales.py  step2_hard_negatives.py  step2_old_hard_negatives.py
src/iroh/experiments/: ablation.py  ensemble_ablation.py  evaluate_plots.py  rationale_stage12_ablation.py  run_search.py
src/iroh/train/: precompute_embeddings.py  train_cross_encoder.py  train_judge_gemma4.py
