[project]
name = "data"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.5",
    "aiosignal>=1.4.0",
    "aiosqlite>=0.22.1",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "attrs>=26.1.0",
    "banks>=2.4.2",
    "bitarray>=3.8.1",
    "bitsandbytes>=0.49.2",
    "blinker>=1.9.0",
    "catalogue>=2.0.10",
    "certifi>=2026.4.22",
    "charset-normalizer>=3.4.7",
    "click>=8.3.3",
    "colbert-ai>=0.2.22",
    "colorama>=0.4.6",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "dataclasses-json>=0.6.7",
    "datasets>=4.8.5",
    "deprecated>=1.3.1",
    "dill>=0.4.1",
    "dirtyjson>=1.0.8",
    "distro>=1.9.0",
    "faiss-cpu>=1.13.2",
    "fast-pytorch-kmeans>=0.2.2",
    "filelock>=3.29.0",
    "filetype>=1.2.0",
    "flask>=3.1.3",
    "fonttools>=4.62.1",
    "frozenlist>=1.8.0",
    "fsspec>=2026.2.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.50",
    "greenlet>=3.5.0",
    "griffe>=2.0.2",
    "griffecli>=2.0.2",
    "griffelib>=2.0.2",
    "h11>=0.16.0",
    "hf-xet>=1.5.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "huggingface-hub>=1.14.0",
    "idna>=3.13",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "jiter>=0.14.0",
    "joblib>=1.5.3",
    "jsonpatch>=1.33",
    "jsonpointer>=3.1.1",
    "kiwisolver>=1.5.0",
    "langchain>=1.2.18",
    "langchain-core>=1.3.3",
    "langgraph>=1.1.10",
    "langgraph-checkpoint>=4.0.3",
    "langgraph-prebuilt>=1.0.13",
    "langgraph-sdk>=0.3.14",
    "langsmith>=0.8.3",
    "llama-index>=0.14.21",
    "llama-index-core>=0.14.21",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-instrumentation>=0.5.0",
    "llama-index-llms-openai>=0.7.7",
    "llama-index-workflows>=2.20.0",
    "markdown-it-py>=4.2.0",
    "markupsafe>=3.0.3",
    "marshmallow>=3.26.2",
    "matplotlib>=3.10.9",
    "mdurl>=0.1.2",
    "ml-dtypes>=0.5.4",
    "mouseinfo>=0.1.3",
    "mpmath>=1.3.0",
    "multidict>=6.7.1",
    "multiprocess>=0.70.19",
    "mypy-extensions>=1.1.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.6.1",
    "ninja>=1.13.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "onnx>=1.21.0",
    "openai>=2.36.0",
    "orjson>=3.11.9",
    "ormsgpack>=1.12.2",
    "packaging>=26.2",
    "pandas>=3.0.2",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "platformdirs>=4.9.6",
    "propcache>=0.4.1",
    "protobuf>=7.34.1",
    "psutil>=7.2.2",
    "pyarrow>=24.0.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "pygetwindow>=0.0.9",
    "pygments>=2.20.0",
    "pymsgbox>=2.0.1",
    "pyparsing>=3.3.2",
    "pyperclip>=1.11.0",
    "pyrect>=0.2.0",
    "pyscreeze>=1.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pytrec-eval>=0.5",
    "pytweening>=1.2.0",
    "pyyaml>=6.0.3",
    "ragatouille>=0.0.9.post2",
    "rank-bm25>=0.2.2",
    "regex>=2026.4.4",
    "requests>=2.33.1",
    "requests-toolbelt>=1.0.0",
    "rich>=15.0.0",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "sentencepiece>=0.2.1",
    "setuptools>=82.0.1",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "smmap>=5.0.3",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.49",
    "srsly>=2.5.3",
    "sympy>=1.14.0",
    "tenacity>=9.1.4",
    "threadpoolctl>=3.6.0",
    "tiktoken>=0.12.0",
    "tinytag>=2.2.1",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "trl>=1.3.0",
    "typer>=0.25.1",
    "typing-extensions>=4.15.0",
    "typing-inspect>=0.9.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2026.2",
    "ujson>=5.12.1",
    "urllib3>=2.7.0",
    "uuid-utils>=0.14.1",
    "voyager>=2.1.0",
    "werkzeug>=3.1.8",
    "wrapt>=2.1.2",
    "xxhash>=3.7.0",
    "yarl>=1.23.0",
    "zstandard>=0.25.0",
]
